[package]
name = "zip_password_bruteforcer"
version = "0.1.0"
authors = ["Ayrat Kaspranov (tramulns) <user@tramulns.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
zip = { version = "0.5.11", features = [ "default", "deflate", "deflate-miniz", "deflate-zlib" ] }
